# harmful-claim-finder

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.example  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/: EFCSN_keywords.json  topic_name_translations.json
data/example_transcripts/: 2508ZPcN9PM.json  79lSqFzHBtc.json  8PqlzOVfciQ.json  9RFMQEEmU8g.json  9V1U_hnxEjo.json  BoiwgScsV-c.json  ClqK7XvfLg0.json  EYHPED0r9Uw.json  FCgea5o3ALU.json  FU7r3yGjjWc.json  Ih5cz-Qwa6U.json  KMHr18e9Nb8.json  Q0dznt5yegc.json  cExSN3bvSk0.json  kMWlOcjBdMc.json  new_statesman_transcript.txt  noNa3WUGpC8.json  ooYhDNX6Xy0.json  paRtNOFG95I.json  rest_is_politics_transcript.txt  srEZ7V6Z-d0.json  uIFSvnB1WlQ.json
data/pastel_training/: ff_annotations_20250403_1_5_clean.csv  ff_annotations_sample.csv
dev/: demo_pastel_functions.py  download_yt_transcripts.py  extract_claims_test.py  video_claim_extraction_demo.py
scripts/: claim_extraction_example.py
scripts/demos/: claim_extraction_example.py  demo_model_file.json  dummy_text.py  inference_demo.py  keyword_demo.py  pastel_demo.py  transcript_inference_demo.py  transcript_search_demo.py  video_inference_demo.py
src/harmful_claim_finder/: claim_extraction.py  inference.py  pastel_inference.py  prompts.py  transcript_inference.py  transcript_search.py  video_inference.py
src/harmful_claim_finder/claim_type_detector/: __init__.py  claim_typer.py  production_inference.py  utils.py
src/harmful_claim_finder/keyword_filter/: keyword_formatter.py  prompts.py  topic_keyword_filter.py
src/harmful_claim_finder/news_category_detector/: __main__.py  organisation_checking.py  pre_calculation.py  processing.py  topic_classification.py
src/harmful_claim_finder/pastel/: README.md  checkworthy_model.json  inference.py  optimise_weights.py  pastel.py  pastel_functions.py
src/harmful_claim_finder/prompts/: old_video_prompt.md  transcript_search_prompt.md  video_prompt.md
src/harmful_claim_finder/utils/: gemini.py  models.py  parsing.py  sentence_linking.py
tests/harmful_claim_finder/: _test_claim_type_detector.py  test_claim_extraction.py  test_claim_type_detector.py  test_gemini.py  test_parsing.py  test_pastel.py  test_sentence_linking.py  test_topic_keyword_filter.py  test_transcript_inference.py  test_transcript_search.py  test_video_inference.py
tests/harmful_claim_finder/test_data/: dummy_keywords.py
