[tool.poetry]
name = "harmful-claim-finder"
version = "0.0.1"
description = "Library for finding harmful claims in videos."
authors = ["Full Fact <afc@fullfact.org>"]
maintainers = ["Full Fact <afc@fullfact.org>"]
readme = "README.md"
license = "Proprietary"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.13,<3.14" # we can remove the "<3.14" easily if we remove youtube-transcript-api, which is only a dev dependency.
python-dotenv = "^1.0.0"
structlog = "^23.1.0"
pydantic = "^2.10.6"
google-genai = "^1.21.1"
json-repair = "^0.40.0"
numpy = "^2.3.0"
scipy = "^1.15.3"
rapidfuzz = "^3.13.0"
scipy-stubs = "^1.16.0.0"
google-cloud-storage = "^3.1.1"
pycountry = "^24.6.1"
types-google-cloud-ndb = "^2.3.0.20250317"
torch = "^2.7.1"
transformers = "^4.53.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
youtube-transcript-api = "^1.1.0" # doesn't support python 3.14 - but could be removed without much hassle

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
filterwarnings = [
    # "ignore:Deprecated call to `pkg_resources.declare_namespace\\('.*'\\):DeprecationWarning",
    # "ignore::DeprecationWarning:google.rpc",
    # "ignore:Call to deprecated function _.*:schematics.deprecated.SchematicsDeprecationWarning", # Schematics internal warnings
    # "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
] # Ignore some noisy and unfixable warnings

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_calls = true
check_untyped_defs = true
