[project]
name = "harmful-claim-finder"
version = "0.0.1"
description = "Library for finding harmful claims in videos."
authors = [
    { name = "Full Fact", email = "afc@fullfact.org" }
]
maintainers = [
    { name = "Full Fact", email = "afc@fullfact.org" }
]
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "python-dotenv==1.0.0",
    "structlog==23.1.0",
    "pydantic==2.10.6",
    "google-genai==1.21.1",
    "json-repair==0.40.0",
    "scipy==1.15.3",
    "rapidfuzz==3.13.0",
    "scipy-stubs==1.16.0.0",
    "pycountry==24.6.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "pre-commit>=3.3.3",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "youtube-transcript-api>=1.1.0"
]

[build-system]
requires = ["setuptools >= 61.0",
            "wheel"
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
filterwarnings = [
    # "ignore:Deprecated call to `pkg_resources.declare_namespace\\('.*'\\):DeprecationWarning",
    # "ignore::DeprecationWarning:google.rpc",
    # "ignore:Call to deprecated function _.*:schematics.deprecated.SchematicsDeprecationWarning",
    # "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_calls = true
check_untyped_defs = true
