[project]
name = "harmful-claim-finder"
version = "0.0.1"
description = "Library for finding harmful claims in videos."
authors = [
    { name = "Full Fact", email = "afc@fullfact.org" }
]
maintainers = [
    { name = "Full Fact", email = "afc@fullfact.org" }
]
readme = "README.md"
license = { text = "Apache License 2.0" }
requires-python = ">=3.13,<3.14" # we can remove the "<3.14" easily if we remove youtube-transcript-api, which is only a dev dependency.
dependencies = [
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "pydantic>=2.10.6",
    "google-genai>=1.21.1",
    "json-repair~=0.40.0",
    "scipy>=1.15.3",
    "rapidfuzz>=3.13.0",
    "scipy-stubs>=1.16.0.0",
    "transformers>=4.53.1",
    "google-cloud-storage>=3.2.0",
    "torch>=2.7.1",
    "pytest-asyncio>=1.0.0",
    "tenacity>=8.5.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["setuptools >= 61.0",
            "wheel"
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "black>=25.1.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "pre-commit>=3.3.3",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "youtube-transcript-api>=1.1.0" # doesn't support python 3.14 - but could be removed without much hassle
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # "ignore:Deprecated call to `pkg_resources.declare_namespace\\('.*'\\):DeprecationWarning",
    # "ignore::DeprecationWarning:google.rpc",
    # "ignore:Call to deprecated function _.*:schematics.deprecated.SchematicsDeprecationWarning",
    # "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_calls = true
check_untyped_defs = true


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
harmful_claim_finder = [
    "pastel/checkworthy_model.json",
    "prompts/*.md"
]
